# Nux_Lang

./: .gitignore  Install Nux.bat  LICENSE  README.md  build_packages.sh  build_setup.bat  debug.asm  hello.nux  install.sh  installer.cs  make_zip.ps1  nux.rb  nux_idle.py  nux_installer.ps1  nuxdoc.py  setup.ps1  test.cux  test.generated.c  test_aliases.nux  test_array.nux  test_class.nux  test_class.nuxc  test_cux.nux  test_ext.dll.exp  test_ext.dll.lib  test_ext.rs  test_out.nux  test_std.nux  uninstall.sh  uninstaller.cs
nux/nux-ai/: CMakeLists.txt  README.md
nux/nux-ai-simple/: ADVANCED_OPTIMIZATIONS.md  ASSEMBLY.md  CMakeLists.txt  CPU_TRAINING.md  README.md  UNIVERSAL_HARDWARE.md
nux/nux-ai-simple/core/: tensor.c  tensor.h
nux/nux-ai-simple/cpu/: ultra_fast_kernels.c
nux/nux-ai-simple/examples/: advanced.nux  nn_test.cpp  tensor_test.c
nux/nux-ai-simple/gpu/: cuda_kernels.cu  cuda_tensor.h
nux/nux-ai-simple/hal/: embedded_backend.cpp  hal.h  metal_backend.mm  rocm_backend.cpp  sycl_backend.cpp  tiny_gpu.cpp
nux/nux-ai-simple/kernels/: matmul.S  matmul_avx2.asm
nux/nux-ai-simple/nn/: layer.cpp  layer.h  model.cpp  model.h  transformer.h
nux/nux-ai-simple/optimization/: quantization.h
nux/nux-ai-simple/training/: Cargo.toml
nux/nux-ai-simple/training/src/: lib.rs
nux/nux-ai/include/nux_ai/: tensor.h
nux/nux-ai/include/nux_ai/nn/: activation.h  (+2 more)
nux/nux-ai/src/core/: tensor.cpp
nux/nux-ai/src/nn/: activation.cpp  layer.cpp  linear.cpp
nux/nux-ai/src/optim/: optimizer.cpp  sgd.cpp
nux/nux-ai/tests/: linear_regression_test.cpp
nux/nux-frame/: CMakeLists.txt
nux/nux_oleg/libs/: BUILD_GUIDE.md  CMakeLists.txt  DEVELOPMENT_GUIDE.md
nux/nux_oleg/libs-multi/: CMakeLists.txt
nux/nux_oleg/libs/nux-array/: CMakeLists.txt
nux/nux_oleg/nux-gui/: CMakeLists.txt  README.md  run_test.sh
nux/nux_oleg/nux-gui/examples/: widget_showcase.nux
nux/nux_oleg/nux-gui/tests/: TEST_RESULTS.md  architecture_test.cpp
nux/nux_oleg/nux-safe/: CMakeLists.txt
nux/nux_oleg/nux_dist/: .tmp_inline.c  Cargo.toml  README.md  ai_test.asm  ai_test.nux  build_dist.ps1  build_setup.ps1  cert.pem  check_keys.rs  check_labels.rs  debug.asm  debug_out.txt  demo_game.nux  donut.asm  dump.asm  dump_bytecode.rs  err.txt  errors.txt  extract_diff.py  extract_diff2.py  extract_diff3.py  fix.diff  fix.py  fix_advance.py  fix_compiler.py  fix_compiler2.py  fix_compiler3.py  fix_compiler4.py  fix_compiler5.py  fix_load.py  fix_quantum.py  fix_real.py  fix_stdlib.py  fix_stdlib_keywords.py  gen_cert.py  gpu_draw.cu  inject_cux.py  inject_cux_final.py  inject_tensor.py  install.ps1  (+142 more)
nux/nux_oleg/nux_dist/compiler/: lexer.nux
nux/nux_oleg/nux_dist/gpu_draw/: Cargo.toml
nux/nux_oleg/nux_dist/lib/: ai.nux  alloc.nux  file.nux  game.nux  gfx.nux  math.nux  math3d.nux  ui.nux
nux/nux_oleg/nux_dist/nux_ide/: build.gradle.kts  settings.gradle.kts
nux/nux_oleg/nux_dist/nux_release/: install.ps1
nux/nux_oleg/nux_dist/nux_setup/: Cargo.toml  build.rs
nux/nux_oleg/nux_dist/nux_uninstall/: Cargo.toml
nux/nux_oleg/nux_dist/scratch/: find_lines.py  fix_asm_correct.py  fix_assembler.py  fix_compiler_dup.py  fix_compiler_tls.py  fix_lexer.py  fix_lumina_methods.py  fix_print_tokens.py  fix_stmt_net.py  fix_vm_ffi.py  funcs.py  id_out.txt  patch_all.py  patch_alloc.py  patch_compiler_class.py  patch_compiler_dots.py  patch_compiler_dots_correct.py  patch_compiler_dots_methods.py  patch_compiler_dots_regex.py  patch_compiler_import.py  patch_compiler_imports.py  patch_compiler_q.py  patch_debug.py  patch_debug_full.py  patch_errors.py  patch_ffi.py  patch_final.py  patch_final2.py  patch_final3.py  patch_lexer2.py  patch_lexer_quantum.py  patch_lexer_string.py  patch_net_accept.py  patch_net_close.py  patch_net_listen_err.py  patch_net_listen_tls.py  patch_rustls.py  patch_spawn.py  patch_stdlib.py  patch_stdlib_compiler.py  (+9 more)
nux/nux_oleg/nux_dist/src/: assembler.rs  binary_codegen.rs  bonfort_config.rs  compiler.rs  cux.rs  ffi_manager.rs  lexer.rs  lib.rs  main.rs  package_manager.rs  polyglot_parser.rs  type_marshaller.rs  venv_manager.rs  vm.rs
nux/nux_oleg/nux_dist/target2/: .rustc_info.json
nux/nux_oleg/nux_dist/target3/: .rustc_info.json
nux/nux_oleg/nux_dist/test_proj/: nux.toml
nux/nux_oleg/nux_embedded/: Cargo.toml
nux/nux_oleg/nux_portable/: .echo.nux.swp  3d_demo.nux  3d_demo.nux.nuxi  Cargo.toml  bench_loop.nux  bench_loop.nux.backup  billing.nux  billing.nux.backup  billing_float.nux  billing_float.nux.backup  build_packages.sh  camera_demo.nux  check_braces.py  collections.nux  cv_test.nux.nux.asm  cv_test.nux.nuxi  debug_camera.nux  debug_camera.nux.backup  demo_arrays.nux  demo_std.nuxi  echo.nux  echo.nuxi  extreme_bin.exe.c  file.nux  file.nux.backup  fix.py  graphics.nux.backup  graphics2d.nux  graphics_test.nux.backup  hardware.nuxi  hello_test.nux.nuxi  init.anux  init.nuxi  io.nux.backup  math.nux  memory.nux  mock_camera.py  nux  nuxc  nx.nux  (+63 more)
nux/nux_oleg/nux_portable/NuxHost/: NuxHost.ino  test_blink.micro.h
nux/nux_oleg/nux_portable/bench_loop_nux/: bench_loop.nuxi  bench_loop.nuxi.v3
nux/nux_oleg/nux_portable/billing_nux/: billing.nuxi
nux/nux_oleg/nux_portable/camera_demo_nux/: camera_demo.nuxi
nux/nux_oleg/nux_portable/cv_test_nux/: cv_test.nuxi
nux/nux_oleg/nux_portable/debug_camera_nux/: debug_camera.nuxi.v1
nux/nux_oleg/nux_portable/hello_high_nux/: hello_high.nuxi  hello_high.nuxi.v1
nux/nux_oleg/nux_portable/lib/: gpio.nuxel  io.nux  kernel.nuxi  math.nux  memory.nux  std.nuxel
nux/nux_oleg/nux_portable/my_project/: board.nuxg  main.nux  nux.toml
nux/nux_oleg/nux_portable/runtime_c/: common.h  main.c
nux/nux_oleg/nux_portable/sample_nux/: sample.nuxi
nux/nux_oleg/nux_portable/src/: compiler.rs  editor.rs  flasher.rs  high_level.rs  jit_backend.rs  lexer.rs  main.rs  micro_vm.rs  project.rs  transpiler.rs  versioning.rs  vm.rs
nux/nux_oleg/nux_portable/test_advanced_nux/: test_advanced.nuxi
nux/nux_oleg/nux_portable/test_loops_nux/: test_loops.nuxi  test_loops.nuxi.v1
nux_ml/: Cargo.toml
nux_ml/src/: lib.rs
(+1078 files in other folders)
