[package]
name = "nux"
version = "0.1.0"
edition = "2021"
authors = ["Ainux Team"]
description = "Nux Programming Language - Compiler and Runtime"
license = "MIT"

[lib]
name = "nux"
path = "src/lib.rs"

[[bin]]
name = "nux"
path = "src/main.rs"

[[bin]]
name = "bonfort"
path = "src/bin/bonfort.rs"

[dependencies]
which = "4.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
semver = "1.0"
minifb = { version = "0.27", optional = true }

[features]
default = ["minifb"]
minifb = ["dep:minifb"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link Time Optimization
codegen-units = 1
panic = "abort"
strip = true     # Strip symbols
