[package]
name = "nux"
version = "0.1.0"
edition = "2021"
authors = ["Ainux Team"]
description = "Nux Programming Language - Compiler and Runtime"
license = "MIT"

[lib]
name = "nux"
path = "src/lib.rs"

[[bin]]
name = "nux"
path = "src/main.rs"

[[bin]]
name = "bonfort"
path = "src/bin/bonfort.rs"

[[bin]]
name = "nuxpm"
path = "src/bin/nuxpm.rs"

[[bin]]
name = "nuxvm"
path = "src/bin/nuxvm.rs"

[dependencies]
which = "4.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
semver = "1.0"
minifb = { version = "0.27", optional = true }
libloading = "0.9.0"
colored = "2.1"
indicatif = "0.17"
native-tls = "0.2.18"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.1"
num-complex = "0.4.6"
rand = "0.10.1"
dirs = "6.0.0"

[features]
default = ["minifb"]
minifb = ["dep:minifb"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link Time Optimization
codegen-units = 1
panic = "abort"
strip = true     # Strip symbols
